fixes search bar, broken in #353

--- a/koduyorum-web/src/Feed.css
+++ b/koduyorum-web/src/Feed.css
@@ -19,7 +19,6 @@ body {
     justify-content: space-between;
     align-items: center;
     height: auto;
-    overflow: hidden; 
     max-height: 80px;
   }
   
